[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "package with a set of minigames"
authors = ["Nikel_Andrey <NikelAndrey94@gmail.com>"]
packages = [{ include = "brain_games" }, ]
readme = "README.md"
classifiers = [
    "Topic :: Software Development :: poetry",
    "Topic :: Software Development ::Libraries :: prompt"
]
repository = "https://github.com/Nea1o/python-project-49"

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

